--- a/webroot/style.css
+++ b/webroot/style.css
@@ -88,12 +88,11 @@ body {
   display: flex;
   align-items: center;
   gap: 5px;
-  color: black;
-  font-size: 14px;
+  color: white;
+  font-size: 17px;
   margin-right: 10px;
-  background-color: rgba(255, 255, 255, 0.357);
-  padding: 0px 4px;
-  border-radius: 30%;
+  font-family: sans-serif;
+  font-weight: 400; 
 }
 #gamesPlayedCount {
   font-weight: bold;
